--- a/Css/registro.css
+++ b/Css/registro.css
@@ -73,5 +73,8 @@ body {
   .login-card-footer-nav a {
     font-size: 14px;
     color: #919aa3; }
+    .login-card-back {
+      font-size: 16px;
+      color: #ff9100; }
 
 /*# sourceMappingURL=login.css.map */
